@@ -140,7 +140,9 @@ PrepData <- function(data, model, itemtype, guess, upper,
                 constrain[[length(constrain) + 1L]] <- rsmConstraint
             }
         }
-    }
+    }        
+    if(all(itemtype %in% c('Rasch', '1PL', 'rsm', 'grsm')))
+        pars[[length(pars)]]@est[2L] <- TRUE
     npars <- sum(sapply(pars, function(x) sum(x@est)))
     if(is.null(prodlist)) prodlist <- list()
     ret <- list(pars=pars, npars=npars, constrain=constrain, prodlist=prodlist, itemnames=itemnames,
